--- a/Jellyfin.Plugin.JellyfinEnhanced/Configuration/configPage.html
+++ b/Jellyfin.Plugin.JellyfinEnhanced/Configuration/configPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Jellyfin Enhanced</title>
+    <title>Netflix Enhanced</title>
 </head>
 <body style="background: black;">
 <div class="page type-interior pluginConfigurationPage" data-require="emby-input,emby-checkbox,emby-select" data-role="page" id="JellyfinEnhancedPage" style="color: #eee;">
@@ -9,7 +9,7 @@
         <div class="content-primary">
             <div class="verticalSection">
                 <div class="sectionTitleContainer">
-                     <h2 class="sectionTitle">Jellyfin Enhanced</h2>
+                     <h2 class="sectionTitle">Netflix Enhanced</h2>
                         <a is="emby-linkbutton" class="raised raised-mini emby-button" style="margin-left: 2em;" target="_blank" href="https://github.com/n00bcodr/Jellyfin-Enhanced">
                             <i class="md-icon button-icon button-icon-left secondaryText"></i>
                             <span>Help</span>
@@ -196,7 +196,7 @@
                                         <strong>Note:</strong> Users can individually customize their own settings by opening the Enhanced Panel:<br>
                                         • Press <code>?</code> key (default shortcut)<br>
                                         • Long Press on user profile picture in the top-right corner<br>
-                                        • Through "Jellyfin Enhanced" link from the side bar<br>
+                                        • Through "Netflix Enhanced" link from the side bar<br>
                                         • Access via playback controls menu during video playback (only on mobile devices)
                                     </div>
                                 </div>
@@ -718,7 +718,7 @@
                                 </label>
                             </div>
                             <div class="fieldDescription" style="margin-bottom: 2em;">
-                                When enabled, any media requested through Jellyseerr Search through Jellyfin Enhanced will automatically be added to the requesting user's Watchlist.
+                                When enabled, any media requested through Jellyseerr Search through Netflix Enhanced will automatically be added to the requesting user's Watchlist.
                                 <br><br>
                                 <strong>Note:</strong> This feature requires <a class="sectionTitle" target="_blank" href="https://github.com/ranaldsgift/KefinTweaks" style="text-decoration: underline; font-weight: bolder;">KefinTweaks</a> to be installed to actually view the watchlisted items.
                             </div>
@@ -1069,7 +1069,7 @@
                             <div style="background-color: rgba(255, 255, 255, 0.05); border-left: 4px solid #ffc107; border-radius: 4px; padding: .5em 1em; margin: 0 0 1.5em 0; display: flex; align-items: center; gap: 1em;">
                                 <i class="material-icons" style="color: #ffc107; font-size: 18px;">note</i>
                                 <div>
-                                    Currently replaces icons for (if installed): Jellyfin Enhanced, JavaScript Injector, Intro Skipper, Reports, JellySleep, Home Screen Sections, and File Transformation.
+                                    Currently replaces icons for (if installed): Netflix Enhanced, JavaScript Injector, Intro Skipper, Reports, JellySleep, Home Screen Sections, and File Transformation.
                                 </div>
                             </div>
 
