--- a/Jellyfin.Plugin.JellyfinEnhanced/PluginPages/CalendarPage.html
+++ b/Jellyfin.Plugin.JellyfinEnhanced/PluginPages/CalendarPage.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 <div id="je-error" style="display:none">
-  Jellyfin Enhanced not ready.
+  Netflix Enhanced not ready.
 </div>
 <script>
 (function () {
